# decord2-temp

./: .gitignore  CMakeLists.txt  README.md  gpu.Dockerfile
.github/workflows/: ccpp.yml  pypi.yml
cmake/util/: FindCUDA.cmake  FindCUDAArchFlags.cmake  FindFFmpeg.cmake  Util.cmake
examples/: audio_reader.ipynb
include/decord/runtime/: c_runtime_api.h
python/: pyproject.toml  setup.py
python/decord/: __init__.py
python/decord/_ffi/: libinfo.py
scripts/: fetch-vendor.py  ffmpeg-7.1.json  ffmpeg-8.0.json
src/audio/: audio_reader.cc  audio_reader.h
src/runtime/: file_util.cc
src/video/: video_reader.cc
src/video/ffmpeg/: ffmpeg_common.h  filter_graph.cc
src/video/nvcodec/: cuda_threaded_decoder.cc  cuda_threaded_decoder.h
tests/python/unittests/: test_audio_reader.py  test_av_reader.py  test_bridges.py  test_video_reader.py
tools/: build_macos_10_15.sh  build_manylinux_2_28.sh  update_version.py
